First attempt at deploying

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,16 +1,1 @@
-* {
-  font-family: "Lato", sans-serif;
-}
-
-.group-link .icon {
-  font-size: 24px;
-}
-
-.group-link:hover .facebook {
-  color: #4267B2;
-}
-
-.group-link:hover .whatsapp {
-  color: #25D366;
-}
-
+*{font-family:Lato,sans-serif}.group-link .icon{font-size:24px}.group-link:hover .facebook{color:#4267b2}.group-link:hover .whatsapp{color:#25d366}
