--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,10 +2,6 @@
   font-family: "Lato", sans-serif;
 }
 
-body {
-  height: 100%;
-}
-
 .group-link .icon {
   font-size: 24px;
 }
@@ -16,5 +12,9 @@ body {
 
 .group-link:hover .whatsapp {
   color: #25D366;
+}
+
+.text-small {
+  font-size: 0.8em;
 }
 
